# vibe-trend-analyzer-daily

./: .env.example  .gitignore  COLOR_CONTRAST_GUIDE.md  CONTRAST_AUDIT.md  DATABASE_SETUP.md  PRODUCTION_GUIDE.md  README.md  STYLING_ISSUES_AUDIT.md  dashboard_demo.html  package-lock.json  package.json  tailwind.config.ts  test-db-connection.js  test-db-direct.js  test-storage-layer.js  vite.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml
ai/nlp/: .env.example  Dockerfile  README.md  pyproject.toml  test_deepseek_api.py  test_endpoints.py
ai/nlp/app/: __init__.py  main.py  models.py  requirements.txt  schemas.py  services.py  streaming.py  utils.py
ai/nlp/app/api/: __init__.py  batch_analyze.py
ai/nlp/app/core/: __init__.py  adaptive.py  batching.py  cache.py
ai/nlp/app/intelligence/: __init__.py  anomalies.py  confidence.py  constants.py  emotions.py  fusion.py  layer.py  schemas.py  trends.py
ai/nlp/app/llm/: __init__.py
ai/nlp/app/llm/deepseek/: __init__.py  client.py  explain_cache.py  limits.py  routes.py  schemas.py
ai/nlp/app/llm/deepseek/prompts/: daily_summary.txt  explain.txt  hourly_summary.txt  narrative.txt  sector_summary.txt
ai/nlp/app/summaries/: __init__.py  jobs.py  routes.py  schemas.py  storage.py
backend/api/: .env.example  IMPLEMENTATION.md  PHASE3_SUMMARY.md  README.md  analytics.ts  auth.ts  devServer.ts  email.ts  index.ts  jobs.ts  redis.ts  (+9 more)
docs/: ARCHITECTURE.md  GETTING_STARTED.md
infra/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
shared/: index.ts  package.json  schema.ts
(+400 files in other folders)
